# ChangeLog for app-crypt/mhash
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/mhash/ChangeLog,v 1.38 2007/03/28 03:29:51 robbat2 Exp $

*mhash-0.9.8.1 (28 Mar 2007)

  28 Mar 2007; Robin H. Johnson <robbat2@gentoo.org> +mhash-0.9.8.1.ebuild:
  Bug #155138, version bump, now that it is finally big-endian safe again.

  18 Mar 2007; Fabian Groffen <grobian@gentoo.org> mhash-0.9.1.ebuild,
  mhash-0.9.2.ebuild, mhash-0.9.3.ebuild, mhash-0.9.3-r1.ebuild:
  Dropped ppc-macos, see you in prefix

  11 Jan 2007; Mike Frysinger <vapier@gentoo.org> mhash-0.9.1.ebuild,
  mhash-0.9.2.ebuild, mhash-0.9.3.ebuild, mhash-0.9.3-r1.ebuild:
  Remove pointless call to prepalldocs.

  19 Oct 2006; Roy Marples <uberlord@gentoo.org> mhash-0.9.2.ebuild,
  mhash-0.9.3.ebuild, mhash-0.9.3-r1.ebuild:
  Added ~sparc-fbsd keyword.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> mhash-0.9.2.ebuild,
  mhash-0.9.3-r1.ebuild:
  Keyword the right one.

  22 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> mhash-0.9.3-r1.ebuild:
  Add ~x86-fbsd keyword.

  08 Jan 2006; Luca Longinotti <chtekk@gentoo.org> mhash-0.9.2.ebuild,
  mhash-0.9.3-r1.ebuild:
  Fix bug #117310.

*mhash-0.9.3-r1 (27 Dec 2005)

  27 Dec 2005; Robin H. Johnson <robbat2@gentoo.org>
  +files/mhash-0.9.3-mhash_free.patch, +mhash-0.9.3-r1.ebuild:
  Bug #116769 - upstream accidently dropped a symbol. Note that 0.9.3* is
  package.masked for the moment due to another bug as well.

*mhash-0.9.3 (26 Dec 2005)

  26 Dec 2005; Robin H. Johnson <robbat2@gentoo.org> +mhash-0.9.3.ebuild:
  Version bump.

  19 Feb 2005; Hardave Riar <hardave@gentoo.org> mhash-0.9.1.ebuild:
  Stable on mips

*mhash-0.9.2 (14 Feb 2005)

  14 Feb 2005; Robin H. Johnson <robbat2@gentoo.org> +mhash-0.9.2.ebuild:
  Bug #79346, version bump.

  30 Nov 2004; Robin H. Johnson <robbat2@gentoo.org> mhash-0.9.1.ebuild:
  Bug #72011, DESTDIR.
