@@ -1,36 +1,11 @@
 AUX mhash-0.9.3-mhash_free.patch 488 RMD160 85cf740248cdd2f106ade419c82d6f8d99bc88e3 SHA1 cbeef97af378cfb0f3b7ee4dd427fe954d1fdaa3 SHA256 9f1e1458c74e33d33f3698c394fd3cb50e9a3ab8f9db1ca163985f80442f4314
-MD5 d27bb1251e5f7314b085056b0c28a600 files/mhash-0.9.3-mhash_free.patch 488
-RMD160 85cf740248cdd2f106ade419c82d6f8d99bc88e3 files/mhash-0.9.3-mhash_free.patch 488
-SHA256 9f1e1458c74e33d33f3698c394fd3cb50e9a3ab8f9db1ca163985f80442f4314 files/mhash-0.9.3-mhash_free.patch 488
 DIST mhash-0.9.2.tar.gz 853662 RMD160 d42fe04a9c0f5c5a1e3a6fb15b89be043de678f8 SHA1 2b1b377264386a305cf896452aa2c5563d414098 SHA256 50a471c543407e44947ad74496ab78843d53db66ae06ec0f9f3cd393ca9f1917
 DIST mhash-0.9.3.tar.gz 1021016 RMD160 4c835544593352e17a17eb30c178e502e21b0674 SHA1 12881733726b0f6a6159def3e7b6aed9436b47ad SHA256 1e10d5a8136fec1859175c001e9c9355cf5507d9c0cd2bfe5e615311908a64b2
 DIST mhash-0.9.8.1.tar.gz 1125969 RMD160 96cbe5c64704d0d4d231c13130f7f858540c7c72 SHA1 53d5d5332d9cf6ffbb27f26f8c1a52739b35784e SHA256 84ac58e2a374e56caa96d6d4fe006a1911573e2781115c11650e1b8833b32925
+DIST mhash-0.9.9.tar.gz 919622 RMD160 8bca6a7bbfafb4098a829b60f7027c2de0fa0e10 SHA1 81fddd3b127232b3b3db8aea5b9154d64517c161 SHA256 a61d4f30f3377afd41e316e53f1d6a9a829f34d20add0e4bb29752cb01435c77
 EBUILD mhash-0.9.2.ebuild 869 RMD160 88b88ca8d62f90b8e1f271edd16358d6f8c7c969 SHA1 e8c7bfd88ce2c85be040eb3efaaabf4717045cad SHA256 624dc54fbcd06b0d3fa6da76bc78428d3976f704c469138c238e32b7827ea7c3
-MD5 a50c53af5b0d5b1a0647515ca1aba20e mhash-0.9.2.ebuild 869
-RMD160 88b88ca8d62f90b8e1f271edd16358d6f8c7c969 mhash-0.9.2.ebuild 869
-SHA256 624dc54fbcd06b0d3fa6da76bc78428d3976f704c469138c238e32b7827ea7c3 mhash-0.9.2.ebuild 869
 EBUILD mhash-0.9.3-r1.ebuild 1023 RMD160 67f41e4a85c715e324f1e1af4a681f79fa32ea5e SHA1 487ec0b0550111d83f863d556e70f9d90aadbf1f SHA256 880935212221d0a89ce876b45b5bcec322b3a8d72bbb303643d0541209136df5
-MD5 5c26459a1502fd7a1bec5cce137e4e87 mhash-0.9.3-r1.ebuild 1023
-RMD160 67f41e4a85c715e324f1e1af4a681f79fa32ea5e mhash-0.9.3-r1.ebuild 1023
-SHA256 880935212221d0a89ce876b45b5bcec322b3a8d72bbb303643d0541209136df5 mhash-0.9.3-r1.ebuild 1023
 EBUILD mhash-0.9.8.1.ebuild 941 RMD160 920a4460eaab2b47ef00facd35d31f7d5ab8d04c SHA1 2ac267bdc32ab28c25a440a9318cd43b9fad39c3 SHA256 d2aed5d28bac962002ab0a66ba2dd963d2dda16f7e9e27d7d88e641bb97bbb16
-MD5 fd68b8a940c777d5e85f0b873439875b mhash-0.9.8.1.ebuild 941
-RMD160 920a4460eaab2b47ef00facd35d31f7d5ab8d04c mhash-0.9.8.1.ebuild 941
-SHA256 d2aed5d28bac962002ab0a66ba2dd963d2dda16f7e9e27d7d88e641bb97bbb16 mhash-0.9.8.1.ebuild 941
-MISC ChangeLog 4733 RMD160 eaede3c453d6ffa523593b3d82cf6c9f7fb9c2b7 SHA1 bc69c2b49ca1725da3429198b4620e178902ea59 SHA256 0d2588491e6e10c19bbad6b75c2db68d491bccaae2f506eff02327e2be889b81
-MD5 097fe8c36c482a5e822fec3ebad1db6a ChangeLog 4733
-RMD160 eaede3c453d6ffa523593b3d82cf6c9f7fb9c2b7 ChangeLog 4733
-SHA256 0d2588491e6e10c19bbad6b75c2db68d491bccaae2f506eff02327e2be889b81 ChangeLog 4733
+EBUILD mhash-0.9.9.ebuild 939 RMD160 8c64c24971cb9bcb1881fc724785853afb82c993 SHA1 3f22520cda5b1951c542a4d8b083578b9adb5edd SHA256 241ccc0d2a2b7dc3e1ee54cbe7cab0ec363464953187821b3cb02dfd827c8055
+MISC ChangeLog 4852 RMD160 fa3651783e3ae65f8f69446b0fffc74916c5fff6 SHA1 1fd5c4b2ccae6c8f6dd4d2815d7c2f9998008e94 SHA256 a12bef946f012972f8b00ee3021fd39c44f8cca124a6f31a8e2945de7396b105
 MISC metadata.xml 279 RMD160 f84566b5a463b59cc5ddd8a2210a54de9492ed2f SHA1 98caf044b8fce3f5ff202c7f7b71f0dcb9d51947 SHA256 785db7b7f8e4f9a526dc574ce2aa10024cc83af170f38ec9af9f56c23fc15543
-MD5 b0d485ea1a51fb83c70daedef2599272 metadata.xml 279
-RMD160 f84566b5a463b59cc5ddd8a2210a54de9492ed2f metadata.xml 279
-SHA256 785db7b7f8e4f9a526dc574ce2aa10024cc83af170f38ec9af9f56c23fc15543 metadata.xml 279
-MD5 9a507d1a42f82da5c0646597ed31fb1f files/digest-mhash-0.9.2 235
-RMD160 3bcc5169fdf4afdb87e499eb2d36ef608f435fb5 files/digest-mhash-0.9.2 235
-SHA256 3d91ff36a0a84b7890ccabacbaedad52cd9806f3d8a171b8cd5ff2ff61da8234 files/digest-mhash-0.9.2 235
-MD5 fe9b43960f04524fab912273885b8873 files/digest-mhash-0.9.3-r1 238
-RMD160 c79c409013cb48204788289da0efbddb864a62d9 files/digest-mhash-0.9.3-r1 238
-SHA256 e8879a453815899a2cf42088ae2b12aa6f0708e972d8327457c0c3355187f825 files/digest-mhash-0.9.3-r1 238
-MD5 397471c8d96d21cf0227cabfd2d6a7e2 files/digest-mhash-0.9.8.1 244
-RMD160 5a2ce18e7466034c5a36eb63c144271174edcb71 files/digest-mhash-0.9.8.1 244
-SHA256 aeaff7b8aa448308f5322f5b052b8e5926ff2d302c4c21c33af8d0c209c10725 files/digest-mhash-0.9.8.1 244
