@@ -1,0 +1,36 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/mhash/mhash-0.9.9.ebuild,v 1.1 2007/05/01 06:31:22 robbat2 Exp $
+
+EAPI="prefix"
+
+inherit eutils
+
+DESCRIPTION="library providing a uniform interface to a large number of hash algorithms"
+HOMEPAGE="http://mhash.sourceforge.net/"
+SRC_URI="mirror://sourceforge/mhash/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-solaris"
+IUSE=""
+
+DEPEND=""
+RDEPEND=""
+
+src_compile() {
+	econf \
+		--enable-static \
+		--enable-shared || die
+	emake || die "make failure"
+	cd doc && emake mhash.html || die "failed to build html"
+}
+
+src_install() {
+	dodir /usr/{bin,include,lib}
+	make install DESTDIR="${D}" || die "install failure"
+
+	dodoc AUTHORS INSTALL NEWS README TODO THANKS ChangeLog
+	dodoc doc/*.txt doc/skid* doc/*.c
+	dohtml doc/mhash.html || die "dohtml failed"
+}
