@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/mhash
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/mhash/ChangeLog,v 1.38 2007/03/28 03:29:51 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/mhash/ChangeLog,v 1.39 2007/05/01 06:31:22 robbat2 Exp $
+
+*mhash-0.9.9 (01 May 2007)
+
+  01 May 2007; Robin H. Johnson <robbat2@gentoo.org> +mhash-0.9.9.ebuild:
+  Version bump.
 
 *mhash-0.9.8.1 (28 Mar 2007)
 
